# vulncopilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  azure-pipelines.yml  chainlit.md  config.py  pyproject.toml
.chainlit/: config.toml
admin/: dashboard.py
docs/: README.md  action-buttons.md  chatbot-architecture.drawio  competitive-analysis.md  container-hardening.md  cwe-integration.md  data-loading.md  deploy-azure-app-service.md  deploy-gcp-cloud-run.md  egress-hardening.md  eks-myeks-checklist.md  eks-runbook.md  future-enhancements.md  k8s-pod-hardening.md  load-nvd-full-todo.md  logfire-setup.md  mcp-server-azure.md  mcp-server.md  migrate-to-supabase.md  network-hardening.md  nvd-integration.md  observability.md  public-access-plan.md  public-access-setup.md  reference-url-scraping.md  rename-cutover-runlog.md  supabase-readonly-role.md
evals/: README.md  conftest.py  dataset.yaml  derive_thresholds.py  harness.py  scoring.py  test_offline_evals.py  thresholds.py
infra/: main.bicep  parameters.dev.bicepparam
k8s/: configmap.yaml  deployment.yaml  external-secret.yaml  ingress.yaml  networkpolicy-egress.yaml  networkpolicy.yaml  secret.yaml.example  service.yaml  serviceaccount.yaml
mcp_server/: server.py
plans/: competitive-analysis.md  custom-domain-cloudflare.md  etl-stats-dashboard.md  eval-framework.md  future-enhancements.md  postgres-hosting-options.md  public-access-plan.md  pydantic-ai-v2-migration.md  rename-to-vulncopilot.md  ssvc-affected-integration.md  stig-iava-integration.md  (+1 more)
(+53 files in other folders)
