[project]
name = "rag-chatbot"
version = "0.1.0"
description = "A retrieval-augmented generation chatbot built with Pydantic AI and Chainlit. Uses PostgreSQL with pgvector for persistent vector storage of CISA KEV data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "asyncpg>=0.30.0",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.0",
    "boto3>=1.40.61",
    "chainlit>=2.9.6",
    "httpx>=0.28.0",
    "openai>=2.17.0",
    "pgvector>=0.4.0",
    "pydantic-ai>=1.38.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "langfuse>=3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__", "data", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = [
    "S101",  # allow assert
    "S104",  # allow binding 0.0.0.0 (Docker)
    "S108",  # allow /tmp usage
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["S602", "S603", "E402"]  # allow subprocess and sys.path manipulation in scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
